Defaults are now used if no custom extension are set